fixed a bug where sections were cut by page breaks in pdf

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -400,7 +400,7 @@ section.three-column .sort-placeholder {
 }
 
 /* Media Queries */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 992px) {
     #cv {
         padding: 0.1rem;
     }
